# rnet

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  rnet.pyi
.github/: build.sh  musl_build.sh
.github/workflows/: ci.yml  style.yml
bench/: README.md  bench.py  benchmark_results.csv  server.py
examples/: auth.py  base_url.py  basic_auth.py  bearer_auth.py  body.py  client.py  form.py  get.py  impersonate.py  json.py  logger.py  multipart.py  only_get.py  only_req.py  proxy.py  query.py  req.py  stream.py  verify.py  ws.py
examples/blocking/: auth.py  base_url.py  basic_auth.py  bearer_auth.py  body.py  client.py  cookie.py  form.py  get.py  impersonate.py  json.py  multipart.py  proxy.py  query.py  req.py  stream.py  ws.py
src/: buffer.rs  client.rs  dns.rs  error.rs  headers.rs  impersonate.rs  json.rs  lib.rs  macros.rs  method.rs  req.rs  resp.rs  response.rs  stream.rs  stubgen.rs  version.rs
src/async_impl/: client.rs  http.rs  macros.rs  mod.rs  request.rs  ws.rs
src/async_impl/response/: http.rs  mod.rs
src/async_impl/response/ws/: message.rs  mod.rs
src/async_impl/ws/: message.rs  mod.rs
src/blocking/: client.rs  http.rs  mod.rs  ws.rs
src/blocking/response/: http.rs  mod.rs  ws.rs
src/client/: macros.rs  mod.rs  request.rs
src/client/response/: mod.rs  ws.rs
src/client/response/http/: mod.rs  stream.rs
src/param/: client.rs  mod.rs  req.rs  request.rs  websocket.rs  ws.rs
src/response/: http.rs  mod.rs  ws.rs
src/response/http/: stream.rs
src/types/: body.rs  cookie.rs  dns.rs  enums.rs  headers.rs  impersonate.rs  indexmap.rs  ipaddr.rs  json.rs  method.rs  mod.rs  proxy.rs  status_code.rs  version.rs
src/types/multipart/: form.rs  part.rs
src/typing/: body.rs  cookie.rs  enums.rs  header.rs  headers.rs  ipaddr.rs  json.rs  macros.rs  mod.rs  proxy.rs  ssl.rs  status.rs  verify.rs
src/typing/multipart/: form.rs  mod.rs  part.rs
src/typing/param/: client.rs  mod.rs  request.rs  ws.rs
tests/: auth_test.py  badssl.py  badssl_test.py  client_test.py  compression_test.py  decompress_test.py  request_test.py  resp_test.py  response_test.py  send_body_test.py
tests/certs/: badssl.pem
