[package]
name = "rnet"
version = "1.3.1"
description = "An easy and powerful Python HTTP Client with Black Magic"
edition = "2021"
rust-version = "1.83.0"
license = "GPL-3.0"
repository = "https://github.com/0x676e67/rnet"
authors = ["0x676e67 <gngppz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rnet"
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "stub_gen"
path = "src/stub_gen.rs"

[features]
logging = ["dep:pyo3-log", "dep:log"]

[dependencies]
tokio = { version = "1.0", features = ["sync"] }
pyo3 = { version = "0.23.5", features = [
    "indexmap",
    "multiple-pymethods",
    "generate-import-lib",
    "experimental-inspect",
] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime", "unstable-streams"] }
pyo3-log = { version = "0.12.1", optional = true }
pyo3-stub-gen = "0.7.0"
log = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime = "0.3.17"
indexmap = { version = "2.7.0", features = ["serde"] }
cookie = "0.18.0"
arc-swap = "1.7.1"
url = "2.5"
rquest = { version = "2.2.1", features = [
    "full",
    "multipart",
    "websocket",
    "hickory-dns",
] }
bytes = "1"
futures-util = { version = "0.3.0", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6", features = [
    "disable_initial_exec_tls",
    "unprefixed_malloc_on_supported_platforms",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
