[package]
name = "rnet"
version = "2.2.10"
description = "A blazing-fast Python HTTP client with TLS fingerprint"
edition = "2024"
rust-version = "1.85.0"
license = "GPL-3.0"
repository = "https://github.com/0x676e67/rnet"
authors = ["0x676e67 <gngppz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rnet"
crate-type = ["cdylib"]
doctest = false

[dependencies]
tokio = { version = "1.45.0", features = ["sync"] }
pyo3 = { version = "0.25.0", features = [
    "indexmap",
    "multiple-pymethods",
    "generate-import-lib",
] }
pyo3-async-runtimes = { version = "0.25.0", features = [
    "tokio-runtime",
    "unstable-streams",
] }
serde = { version = "1.0.219", features = ["derive"] }
mime = "0.3.17"
indexmap = { version = "2.8.0", features = ["serde"] }
arc-swap = "1.7.1"
url = "2.5"
bytes = "1.10.1"
futures-util = { version = "0.3.31", default-features = false }
rquest = { version = "5.1.0", features = [
    "full",
    "multipart",
    "websocket",
    "hickory-dns",
    "apple-network-device-binding",
    "cookies-preserve-order",
    "cookies-multiple",
] }
rquest-util = "2.2.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6", features = [
    "disable_initial_exec_tls",
    "unprefixed_malloc_on_supported_platforms",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
